<resources>
    <string name="app_name"></string>
    <string name="sign_in">Sign in</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_new_product">Add New Product</string>
</resources>