<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="20dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@color/colorbackground">



            <TextView

                android:id="@+id/dtextview_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="36sp"
                android:text="@string/sign_in"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/dphone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/circular_edit"
                android:drawableStart="@drawable/phone_vector"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8sp"
                android:textColor="@color/black"

                android:textColorHint="#757575"
                android:textSize="15sp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/dpassword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/circular_edit"
                android:drawableStart="@drawable/password"

                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8sp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:textSize="15sp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/dlogin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/circular_edit"
                android:textAlignment="center"
                android:text="@string/login"
                tools:ignore="VisualLintButtonSize" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15sp"
                >
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/don_t_have_an_account"
                    android:layout_marginStart="20dp"

                    />

                <TextView
                    android:id="@+id/dsignup_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>